Propagate --patch-module from driver JVM to NativeImageGeneratorRunner
When the native-image bash launcher runs with --patch-module (e.g. for
patched JVMCI), the flag was only applied to the driver JVM. The builder
subprocess (NativeImageGeneratorRunner) did not receive it, causing
ClassNotFoundException for patched module classes.

Read --patch-module args from the driver JVM's runtime configuration
and propagate them to the builder, with deduplication to avoid conflicts
when the mx build system already passes them via -J flags.

Assisted-by: Claude Opus 4.6 <noreply@anthropic.com>